--- a/apps/logistics-frontend/Pages/Shared/Layouts/AuthorizedLayout.razor
+++ b/apps/logistics-frontend/Pages/Shared/Layouts/AuthorizedLayout.razor
@@ -1,6 +1,7 @@
 @using logistics_frontend.Pages.Shared.Components
 @using logistics_frontend.Services.CustomAuthStateProvider
 @using System.Security.Claims
+@using logistics_frontend.Pages.Shared.Sidebars.SidebarComponent
 @inject NavigationManager Navigation
 @inject CustomAuthStateProvider AuthProvider
 
