--- a/apps/logistics-frontend/Pages/Admin/Orders.razor
+++ b/apps/logistics-frontend/Pages/Admin/Orders.razor
@@ -40,9 +40,11 @@
     <select @bind="statusFilter"
             class="w-full md:w-48 px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-orange-500 text-sm text-gray-700">
         <option value="">All Statuses</option>
-        <option value="pending">Pending</option>
-        <option value="completed">Completed</option>
-        <option value="cancelled">Cancelled</option>
+        <option value="Pending">Pending</option>
+        <option value="Assigned">Assigned</option>
+        <option value="InTransit">InTransit</option>
+        <option value="Delivered">Delivered</option>
+        <option value="Cancelled">Cancelled</option>
     </select>
 
     <!-- Start Date -->
@@ -79,8 +81,9 @@ else
     <div class="overflow-x-auto bg-white shadow-sm border rounded-lg">
         <!-- Orders Table -->
         <OrderTable
-            PagedOrders="orders"
+            PagedOrders="FilteredOrders.ToList()"
             CustomerNames="customerNames"
+            InventoryCategories="inventoryCategories"
             CurrentPage="currentPage"
             PageSize="pageSize"
             OnView="ViewOrder"
@@ -123,6 +126,7 @@ else
 @code {
     private List<Order>? orders;
     private Dictionary<Guid, string> customerNames = new();
+    private Dictionary<Guid, string> inventoryCategories = new();
     private string searchTerm = "";
     private string statusFilter = "";
     private int currentPage = 1;
@@ -226,15 +230,24 @@ else
         {
             var customers = DropdownDataService.Customers;
 
-            // Build dictionary mapping CustomerID → FullName
+            // dictionary mapping CustomerID → FullName
             customerNames = customers.ToDictionary(
                 c => c.ID,
                 c => c.Name
+            );
+
+            var inventories = DropdownDataService.Inventories;
+
+            // dictionary mapping OrderID → Category
+            inventoryCategories = inventories.ToDictionary(
+                i => i.ID,
+                i => i.Category
             );
         }
         else
         {
             customerNames = new Dictionary<Guid, string>();
+            inventoryCategories = new Dictionary<Guid, string>();
         }
     }
 
@@ -376,6 +389,11 @@ else
         isDeleteModalOpen = false;
         orderToDeleteId = Guid.Empty;
     }
+
+    @* private void ApplyFilters()
+    {
+        IEnumerable<Order> filtered = orders;
+    } *@
 
 
     private string GetStatusClass(string status) => status.ToLower() switch
