--- a/apps/logistics-frontend/Pages/Shared/Components/InputField.razor
+++ b/apps/logistics-frontend/Pages/Shared/Components/InputField.razor
@@ -18,7 +18,7 @@
             Placeholder="@Placeholder"
         />
     }
-    else if (typeof(TValue) == typeof(int) || typeof(TValue) == typeof(decimal) || typeof(TValue) == typeof(double))
+    else if (typeof(TValue) == typeof(int) || typeof(TValue) == typeof(decimal) || typeof(TValue) == typeof(double) || typeof(TValue) == typeof(long))
     {
         <InputNumber TValue="TValue"
             class="form-control w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm 
